--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
 
     <div class="container my-5">
-        <h1 class="text-white">TOP 5 MOVIES</h1>
+        <h1 class="text-white">TOP 5 PALABAS</h1>
         <br>
         <div class="row g-3">
             <br>
