--- a/index.html
+++ b/index.html
@@ -19,17 +19,20 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
                 <div class="collapse navbar-collapse" id="borgor">
-                    <ul class="navbar-nav ms-auto" style="padding-right: 100px; font-weight: 1000; letter-spacing: 3px; font-size: xx-large; ">
+                    <ul class="navbar-nav ms-auto" style="padding-right: 10px; font-weight: 500; letter-spacing: 2px; font-size: xx-large;justify-content: space-evenly;text-transform: uppercase; margin: 0 20px;">
                         <li class="nav-item">
-                            <a class="nav-link" href="" >Home</a>
+                            <a class="nav-link" href="" style="padding: 20px;">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="" >Movies</a>
+                            <a class="nav-link" href="" style="padding: 20px;">Movies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="" >Contact Us</a>
+                            <a class="nav-link" href="" style="padding: 20px;">Contact Us</a>
                         </li>
                     </ul>
+                    <div class="manipay" style="padding-right: 10px;cursor: pointer;">
+                        <i class="fa-solid fa-magnifying-glass fa-2xl text-dark" style="color: #0f100f;"></i>
+                    </div>
                 </div>
         </div>
     </nav>
